# modlure

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  SOURCES.md  authorized_devices.txt.example  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
demos/01-basic/: SCENARIO.md  capture.hexlog
demos/02-clean/: SCENARIO.md  capture.hexlog
demos/03-mixed/: SCENARIO.md  capture.hexlog
demos/04-water-treatment-tamper/: SCENARIO.md  capture.hexlog
demos/05-port-scan-recon/: SCENARIO.md  capture.hexlog
demos/06-plc-restart-diagnostics/: SCENARIO.md  capture.hexlog
demos/06-threat-intel-enrichment/: SCENARIO.md  capture.hexlog
demos/07-fuzzing-campaign/: SCENARIO.md  capture.hexlog
demos/08-benign-scada-poll/: SCENARIO.md  capture.hexlog
demos/09-setpoint-override/: SCENARIO.md  capture.hexlog
demos/10-multi-unit-sweep/: SCENARIO.md  capture.hexlog
demos/11-coil-flood/: SCENARIO.md  capture.hexlog
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
modlure/: __init__.py  __main__.py  cli.py  connect.py  core.py  feeds.py  mcp_server.py  probe.py
modpot/: __init__.py  __main__.py  cli.py  connect.py  core.py  feeds.py  mcp_server.py  probe.py
ports/: README.md
ports/go/: go.mod  main.go  (+1 more)
scripts/: ports-test.sh
tests/: modbus_fixture.py  test_connect.py  test_core_extra.py  test_feeds.py  test_feeds_cli.py  test_hardening.py  test_probe.py  test_probe_cli.py  test_smoke.py
(+13 files in other folders)
