[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-modpot"
version = "0.1.1"
description = "Spin up a high-interaction Modbus/DNP3 ICS honeypot that logs attacker register reads/writes as structured JSON."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "iot", "modpot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/modpot"

[project.scripts]
"modpot-emit" = "modpot.connect:emit_main"
modpot = "modpot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["modpot"]

[tool.hatch.metadata]
allow-direct-references = true
